After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685192 - Problems playing audio CDs
Problems playing audio CDs
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: Movie player
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-10-01 09:04 UTC by Paul Menzel
Modified: 2013-03-13 17:10 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Paul Menzel 2012-10-01 09:04:56 UTC
Using Debian Sid/unstable with Totem 3.4.2-1, inserting an audio CD into the drive and starting Totem, selecting »File« the audio CD is listed there. Clicking on that, instead of playing the CD the file open dialog is opened and the following is printed to the terminal.

    (totem:25778): GLib-GIO-CRITICAL **: g_mount_guess_content_type_sync: assertion `G_IS_MOUNT (mount)' failed

    (totem:25778): GLib-GObject-CRITICAL **: g_object_unref: assertion `G_IS_OBJECT (object)' failed

    (totem:25778): GLib-CRITICAL **: g_filename_to_uri: assertion `filename != NULL' failed
Comment 1 Paul Menzel 2012-10-01 09:12:48 UTC
I know that Rhythmbox is the recommended program to play audio CDs, but Totem should handle this use case better though.
Comment 2 Paul Menzel 2012-10-01 09:14:50 UTC
(In reply to comment #0)
> Using Debian Sid/unstable with Totem 3.4.2-1, inserting an audio CD into the
> drive and starting Totem, selecting »File« the audio CD is listed there.

The correct name is »Movie« and not »File«.

[…]
Comment 3 Paul Menzel 2012-10-01 09:17:25 UTC
The same issue was reported to the Debian BTS and was assigned the number #574680 [1].

So this issue is present since version 2.28.5. Though in with 3.4

    $ totem cdda://

does not work anymore.

$ totem cdda://

(totem:27415): Totem-WARNING **: Tried to set sidebar page 'properties' but it does not exist
WARNING: gnome-keyring:: couldn't connect to: /home/joey/.cache/keyring-0oJyN7/pkcs11: Datei oder Verzeichnis nicht gefunden

(totem:27415): Totem-WARNING **: chapters: failed to load CMML file cdda://.cmml: Der angegebene Ort ist nicht eingehängt
** Message: Error: Das CD-Laufwerk konnte nicht zum Lesen geöffnet werden.
gstcdparanoiasrc.c(283): gst_cd_paranoia_src_open (): /GstPlayBin2:play/GstURIDecodeBin:uridecodebin0/GstCdParanoiaSrc:source:
cdda_identify failed


[1] http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=574680
Comment 4 Bastien Nocera 2013-03-13 16:55:38 UTC
(In reply to comment #3)
> The same issue was reported to the Debian BTS and was assigned the number
> #574680 [1].
> 
> So this issue is present since version 2.28.5. Though in with 3.4
> 
>     $ totem cdda://
> 
> does not work anymore.

It's not supposed to work either. In fact, it hasn't work since we removed support for audio CD playback.

The error up top is a different one though.
Comment 5 Bastien Nocera 2013-03-13 17:01:39 UTC
The problem is that the playlist parser says that the directory is unhandled:

  • #22 handle_parse_result
    at totem-playlist.c line 1929
  • #23 add_mrls_cb
    at totem-playlist.c line 2184
  • #24 g_simple_async_result_complete
    at gsimpleasyncresult.c line 777
  • #25 complete_in_idle_cb_for_thread
    at gsimpleasyncresult.c line 845
  • #26 g_idle_dispatch
    at gmain.c line 5205
  • #27 g_main_dispatch
    at gmain.c line 3054
  • #28 g_main_context_dispatch
    at gmain.c line 3630
  • #29 g_main_context_iterate
    at gmain.c line 3701
  • #30 g_main_context_iteration
    at gmain.c line 3762
  • #31 g_application_run
    at gapplication.c line 1623
  • #32 main
    at totem.c line 268

When it should work:
$ ./parser cdda://sr0/
** Message: Added URI "cdda://sr0/Track%201.wav"...
** Message: Added URI "cdda://sr0/Track%202.wav"...
** Message: Added URI "cdda://sr0/Track%203.wav"...
** Message: Added URI "cdda://sr0/Track%204.wav"...
** Message: Added URI "cdda://sr0/Track%205.wav"...
** Message: Added URI "cdda://sr0/Track%206.wav"...
** Message: Added URI "cdda://sr0/Track%207.wav"...
** Message: Added URI "cdda://sr0/Track%208.wav"...
Comment 6 Bastien Nocera 2013-03-13 17:10:01 UTC
Fixed in gnome-3-8 and master.

(FWIW, https://bugzilla.redhat.com/show_bug.cgi?id=714714 is the reason it took so long)

commit f997acf0f569ffbcf2a985d89c16188ed6c3aaa4
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Mar 13 18:07:32 2013 +0100

    main: Handle cdda:// URIs as normal files
    
    As we don't special-case the audio CDs anywhere anymore, don't
    block totem-pl-parser from handling it like a directory full
    of files.
    
    This also fixes loads of warnings from the autoload-subtitles plugin
    when launching totem  cdda://sr0/
    
    https://bugzilla.gnome.org/show_bug.cgi?id=685192