main: Handle cdda:// URIs as normal files

As we don't special-case the audio CDs anywhere anymore, don't
block totem-pl-parser from handling it like a directory full
of files.

This also fixes loads of warnings from the autoload-subtitles plugin
when launching totem  cdda://sr0/

https://bugzilla.gnome.org/show_bug.cgi?id=685192